@@ -16,11 +16,6 @@ package org.apache.lucene.queries;
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
-
 import org.apache.lucene.index.AtomicReaderContext;
 import org.apache.lucene.index.Fields;
 import org.apache.lucene.index.IndexReader;
@@ -30,11 +25,16 @@ import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.search.BooleanClause;
 import org.apache.lucene.search.BooleanClause.Occur;
-import org.apache.lucene.search.similarities.Similarity;
 import org.apache.lucene.search.BooleanQuery;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.TermQuery;
+import org.apache.lucene.search.similarities.Similarity;
 import org.apache.lucene.util.ToStringUtils;
+
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
 
 /**
  * A query that executes high-frequency terms in a optional sub-query to prevent
@@ -149,7 +149,7 @@ public class CommonTermsQuery extends Query {
     if (this.terms.isEmpty()) {
       return new BooleanQuery();
     } else if (this.terms.size() == 1) {
-      final TermQuery tq = new TermQuery(this.terms.get(0));
+      final Query tq = newTermQuery(this.terms.get(0), null);
       tq.setBoost(getBoost());
       return tq;
     }
@@ -186,15 +186,15 @@ public class CommonTermsQuery extends Query {
     for (int i = 0; i < queryTerms.length; i++) {
       TermContext termContext = contextArray[i];
       if (termContext == null) {
-        lowFreq.add(new TermQuery(queryTerms[i]), lowFreqOccur);
+        lowFreq.add(newTermQuery(queryTerms[i], null), lowFreqOccur);
       } else {
         if ((maxTermFrequency >= 1f && termContext.docFreq() > maxTermFrequency)
             || (termContext.docFreq() > (int) Math.ceil(maxTermFrequency
                 * (float) maxDoc))) {
           highFreq
-              .add(new TermQuery(queryTerms[i], termContext), highFreqOccur);
+              .add(newTermQuery(queryTerms[i], termContext), highFreqOccur);
         } else {
-          lowFreq.add(new TermQuery(queryTerms[i], termContext), lowFreqOccur);
+          lowFreq.add(newTermQuery(queryTerms[i], termContext), lowFreqOccur);
         }
       }
       
@@ -351,7 +351,7 @@ public class CommonTermsQuery extends Query {
     }
     for (int i = 0; i < terms.size(); i++) {
       Term t = terms.get(i);
-      buffer.append(new TermQuery(t).toString());
+      buffer.append(newTermQuery(t, null).toString());
       
       if (i != terms.size() - 1) buffer.append(", ");
     }
@@ -411,5 +411,15 @@ public class CommonTermsQuery extends Query {
     } else if (!terms.equals(other.terms)) return false;
     return true;
   }
-  
+
+  /**
+   * Builds a new TermQuery instance.
+   * <p>This is intended for subclasses that wish to customize the generated queries.</p>
+   * @param term term
+   * @param context the TermContext to be used to create the low level term query. Can be <code>null</code>.
+   * @return new TermQuery instance
+   */
+  protected Query newTermQuery(Term term, TermContext context) {
+    return context == null ? new TermQuery(term) : new TermQuery(term, context);
+  }
 }
